--- a/Framework/build.gradle
+++ b/Framework/build.gradle
@@ -46,12 +46,16 @@ dependencies {
     compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
     compile 'io.reactivex.rxjava2:rxjava:2.0.7'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.github.VictorAlbertos.RxCache:runtime:1.8.0-2.x'
+    compile 'com.github.VictorAlbertos.Jolyglot:gson:0.0.3'
+
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'pub.devrel:easypermissions:0.4.0'
     compile 'com.afollestad.material-dialogs:commons:0.9.4.4'
     compile 'com.github.Kennyc1012:MultiStateView:1.3.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.0.0@aar'
+    compile 'org.jsoup:jsoup:1.10.3'
     compile deps.appcompat
     compile deps.constraint
     compile deps.design
