--- a/Framework/build.gradle
+++ b/Framework/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.0.0@aar'
     compile 'org.jsoup:jsoup:1.10.3'
+    compile 'com.github.CarGuo:GSYVideoPlayer:v1.6.6'
     compile deps.appcompat
     compile deps.constraint
     compile deps.design
